feat: 添加脚本启动 rpc 服务

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,6 +1,9 @@
 #--------------- Internal service configuration ---------------#
 serverip: 0.0.0.0
 
+api:
+  apiPort: [ 10000 ]
+
 rpcport:
   accountPort: [ 10100 ]
   friendPort: [ 10200 ]
