--- a/script/path_info.cfg
+++ b/script/path_info.cfg
@@ -1,3 +1,7 @@
+msg_name="msg"
+msg_binary_root="../bin/"
+msg_source_root="../cmd/rpc/msg/"
+
 # global configuration file default dir
 config_path="../config/config.yaml"
 
@@ -9,6 +13,7 @@ service_source_root=(
   ../cmd/rpc/account/
   ../cmd/rpc/friend/
   ../cmd/rpc/group/
+  ${msg_source_root}
 )
 
 # service filename
@@ -18,4 +23,5 @@ service_names=(
   account
   friend
   group
+  ${msg_name}
 )
