--- a/compose.yaml
+++ b/compose.yaml
@@ -40,7 +40,7 @@ services:
     environment:
       TZ: Asia/Shanghai
       KAFKA_BROKER_ID: 0
-      KAFKA_ZOOKEEPER_CONNECT: 127.0.0.1:12181
+      KAFKA_ZOOKEEPER_CONNECT: 127.0.0.1:12181/kafka
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://172.23.137.168:9092
       KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
     restart: always
