feat: 添加 transfer 将 kafka 消息持久化到 MySQL

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -57,3 +57,7 @@ kafka:
   ms2pschat:
     addr: [ 127.0.0.1:9092 ]
     topic: "ms2ps_chat"
+  consumergroupid:
+    msgToMongo: mongo
+    msgToMySql: mysql
+    msgToPush: push
