--- a/compose.yaml
+++ b/compose.yaml
@@ -10,6 +10,13 @@ services:
       MYSQL_ROOT_PASSWORD: qin1002.
     restart: always
 
+  mongodb:
+    image: mongo:4.0
+    container_name: mongo
+    ports:
+      - "37017:27017"
+    restart: always
+
   redis:
     image: redis:5.0.7
     container_name: redis
