feat: 更新启动脚本，添加停止脚本

--- a/script/path_info.cfg
+++ b/script/path_info.cfg
@@ -1,3 +1,16 @@
+msg_gateway_name="msg_gateway"
+msg_gateway_binary_root="../bin/"
+msg_gateway_source_root="../cmd/msg_gateway/"
+
+msg_transfer_name="msg_transfer"
+msg_transfer_binary_root="../bin/"
+msg_transfer_source_root="../cmd/msg_transfer/"
+msg_transfer_service_num=1
+
+push_name="push"
+push_binary_root="../bin/"
+push_source_root="../cmd/push/"
+
 msg_name="msg"
 msg_binary_root="../bin/"
 msg_source_root="../cmd/rpc/msg/"
@@ -14,6 +27,9 @@ service_source_root=(
   ../cmd/rpc/friend/
   ../cmd/rpc/group/
   ${msg_source_root}
+  ${msg_gateway_source_root}
+  ${msg_transfer_source_root}
+  ${push_source_root}
 )
 
 # service filename
@@ -24,4 +40,7 @@ service_names=(
   friend
   group
   ${msg_name}
+  ${msg_gateway_name}
+  ${msg_transfer_name}
+  ${push_name}
 )
