--- a/script/path_info.cfg
+++ b/script/path_info.cfg
@@ -26,6 +26,7 @@ service_source_root=(
   ../cmd/rpc/account/
   ../cmd/rpc/friend/
   ../cmd/rpc/group/
+  ../cmd/rpc/conversation/
   ${msg_source_root}
   ${msg_gateway_source_root}
   ${msg_transfer_source_root}
@@ -39,6 +40,7 @@ service_names=(
   account
   friend
   group
+  conversation
   ${msg_name}
   ${msg_gateway_name}
   ${msg_transfer_name}
