--- a/compose.yaml
+++ b/compose.yaml
@@ -94,8 +94,8 @@ services:
        KAFKA_CFG_NODE_ID: 0
        KAFKA_CFG_PROCESS_ROLES: controller,broker
        KAFKA_CFG_CONTROLLER_QUORUM_VOTERS: 0@im-kafka:9093
-       KAFKA_CFG_LISTENERS: PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:9094
-       KAFKA_CFG_ADVERTISED_LISTENERS: PLAINTEXT://im-kafka:9092,EXTERNAL://127.0.0.1:19094
+       KAFKA_CFG_LISTENERS: PLAINTEXT://0.0.0.0:9092,CONTROLLER://:9093,EXTERNAL://:9094
+       KAFKA_CFG_ADVERTISED_LISTENERS: PLAINTEXT://im-kafka:9092,EXTERNAL://172.23.137.168:19094
        KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,EXTERNAL:PLAINTEXT,PLAINTEXT:PLAINTEXT
        KAFKA_CFG_CONTROLLER_LISTENER_NAMES: CONTROLLER
     depends_on:
